[chromium] Layout tests svg-filters.html and alpha.html are crashing intermittently https://bugs.webkit.org/show_bug.cgi?id=92660

Reviewed by James Robinson.

We use two GL contexts to create and upload tile textures.
One context creates the texture, while another uploads it.
Even though the texture is shared by the two contexts, it is not
available to the uploading context immediately after creation,
unless the creating context is flushed.

* platform/graphics/chromium/FrameBufferSkPictureCanvasLayerTextureUpdater.cpp:
(WebCore::createAcceleratedCanvas):
(WebCore::FrameBufferSkPictureCanvasLayerTextureUpdater::updateTextureRect):


Canonical link: https://commits.webkit.org/113453@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127294 268f45cc-cd09-0410-ab3c-d52691b4dbfc